# ocha-relay

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: smoke_check_recipients.py  smoke_create_campaign.py  smoke_listmonk.py
src/ocha_relay/: listmonk.py
tests/: conftest.py  test_listmonk.py
