[project]
name = "ocha-relay"
version = "0.1.0"
description = "Internal utilities for the OCHA data science team's automated tools and communications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OCHA Data Science" }]
dependencies = [
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/OCHA-DAP/ocha-relay"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocha_relay"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "UP",           # pyupgrade
    "B",            # bugbear
    "SIM",          # simplify
    "RUF",          # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
